--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.0"
   }
