--- a/societies-app/package.json
+++ b/societies-app/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.12.0",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-qr-reader": "2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
