--- a/societies-app/package.json
+++ b/societies-app/package.json
@@ -10,10 +10,9 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-qr-reader": "^2.2.1",
+    "react-qr-reader": "2.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-qr-reader": "2.2.1"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
